--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,158 @@
-.App {
+.home-page {
+  background-image: url('./Assets/pexels-david-alberto-carmona-coto-1151418\ \(1\)\ 2.png'); 
+  background-size: cover;
+  background-position: center;
+  height: 100vh; 
+}
+
+.cont{
+  width: 500px;
   text-align: center;
+  overflow-wrap: break-word;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.cont_one{
+  width: 500px;
+  overflow-wrap: break-word;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar-nav{
+
+  margin-left: 20rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.lspace{
+  letter-spacing: 2px;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-link{
+  color: whitesmoke;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.font{
+  font-family: Rubik;
+}
+
+.bold{
+  font-weight: 30rem;
+}
+
+.t-white{
+  color: #FFFFFF;
+}
+
+.sell{
+  color: #FFFFFF;
+  padding:10px 20px ;
+  border: 1px solid #FFFFFF;
+}
+
+.buy{
+  margin-left: 5rem;
+  background-image: linear-gradient(#37ae579e 70%,#1a92d766);
+  color: #FFFFFF;
+  padding:10px 20px ;
+  border: none;
+}
+
+.b{
+  width: 15rem;
+  height: 5rem;
+  font-size: 1.5rem;
+  padding:10px 20px ;
+  border-top-left-radius: 50px; /* Adjust the radius to create a semicircle at the left edge */
+  border-bottom-left-radius: 50px; /* Adjust the radius to create a semicircle at the left edge */
+  border-top-right-radius: 50px; /* Adjust the radius to create a semicircle at the right edge */
+  border-bottom-right-radius: 50px;
+}
+
+.page-2{
+  background-image: url('./Assets/Subtract.png');
+  background-size: cover;
+  background-position: center;
+  height: 80vh; 
+  justify-content: space-between;
+}
+
+
+.page-3{
+  height: 80vh;
+  width: 100%;
+  padding: 0;
+}
+
+.page-4{
+  margin-top: 12%;
+  z-index: 2;
+  background-image: url('./Assets/artificial\ Neurons\ 1.png');
+  background-size: cover;
+  background-position: center;
+  height: 80vh; 
+}
+.box{
+  border-top-left-radius: 5px; /* Adjust the radius to create a semicircle at the left edge */
+  border-bottom-left-radius: 5px; /* Adjust the radius to create a semicircle at the left edge */
+  border-top-right-radius: 5px; /* Adjust the radius to create a semicircle at the right edge */
+  border-bottom-right-radius: 5px;
+}
+
+.learn{
+  border: 4px solid white;
+  color: whitesmoke;
+}
+
+.tet{
+  color: #2F4834;
+  font-weight: 200px;
+
+}
+
+.visit{
+  color:white;
+  width: 20rem;
+  background-image: linear-gradient(#00e0FF,#00fAB1);
+} 
+
+
+.page-5 form h1{
+  color: #2F4834;
+  font-weight: 900;
+  font-size: x-large;
+  letter-spacing: 2px;
+  margin-bottom: 1rem;
+}
+
+.page-5 form h3{
+  color: #808080;
+  font-size: large;
+  margin-bottom: 1rem;
+  letter-spacing: 1px;
+}
+
+.learnOne{
+  color: #4F8326;
+  border: 4px solid #4F8326;
+  padding-left: auto;
+}
+
+.rect{
+  width: 8rem;
+  height: 8rem;
+  background-image: linear-gradient(#b9f2b0 50%,#4F8326 50%);
+  border-radius: 1rem;
+  margin-bottom: -8rem;
+}
+
+.page-6 .box{
+  box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.5);
+}
+
+
+
+/*  ******** MarketPlace ******* */
+
+.intro{
+  background-image: url('./Assets/back2.png');
+  height: 35rem;
 }
