--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,11 @@
   overflow-wrap: break-word;
 }
 
+.t-shadow{
+  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5); 
+
+}
+
 .cont_one{
   width: 500px;
   overflow-wrap: break-word;
@@ -155,4 +160,32 @@
 .intro{
   background-image: url('./Assets/back2.png');
   height: 35rem;
+}
+
+.proj-detail{
+  background-image: linear-gradient(to right,#349D90,#17ee5fa0 15%,rgba(255, 255, 255, 0.271));
+}
+
+.buy-now{
+  width: 12rem;
+  height: 3.5rem;
+  font-size: 1.2rem;
+  padding:10px 20px ;
+  border: none;
+  border-top-left-radius: 50px; 
+  border-bottom-left-radius: 50px; 
+  border-top-right-radius: 50px; 
+  border-bottom-right-radius: 50px;
+  background-image: linear-gradient(#37AE56,#1A93D7);
+  color: white;
+  font-weight: bold;
+}
+
+.frame ul li{
+  margin-top: 1rem;
+  padding-left: 6px;
+}
+
+.active{
+  border-left: 4px solid #3BED96;
 }
